Escher CMS Change History
=========================

Changes Since Last Release
	synced to changes in Spark/Plug's authentication model (using SparkHasher)
	synced to changes in Spark/Plug's exception handling model
	eliminated "meta" namespace and tags; added tag: <et:pages:meta name="">
	form plugin: allow setting default values for multiple checkboxes ("default" attribute now accepts comma-delimited list)
	added missing semicolons in some inline styles of sample site
	eliminated one level of directory hierachy in sparkplug directory
	.htaccess: moved use of header directive inside check for enabled headers module

Version 0.9.0 [2010-11-20]
	Initial Release
	Requires Spark/Plug v1.0.0